name:                haskell-scheme
version:             0.1.0.0
license:             BSD3
author:              Gerry Agbobada
maintainer:          gagbobada+git@gmail.com
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.10

executable haskell-scheme
  main-is:             ../main.hs
  build-depends:       base
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded
