name:                haskell-scheme
version:             0.1.0.0
license:             BSD3
author:              Gerry Agbobada
maintainer:          gagbobada+git@gmail.com
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.10

executable haskell-scheme
  main-is:             main.hs
  other-modules:       HaskellScheme.Parser
                       , HaskellScheme.Evaluator
                       , HaskellScheme.LispTypes
  build-depends:       base
                       , parsec
                       , mtl
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded
